Fix theme toggle and menu color
Theme toggle was too close to copyright text in tablet mode so I've
added a margin. Also I've fixed the color on drop down menu in tablet
mode since it was a bit too birght for my taste in dark mode.

--- a/source/css/footer.css
+++ b/source/css/footer.css
@@ -52,5 +52,15 @@
       margin-top: 10px;
     }
   }
+
+  .theme-toggle {
+    display: flex;
+    flex-direction: row;
+
+    @media (--tablet) {
+      flex-direction: column;
+      margin-top: 10px;
+    }
+  }
 }
 
