--- a/source/css/variables.css
+++ b/source/css/variables.css
@@ -9,7 +9,7 @@
 
   /* dark theme colors */
   --dark-background: #000;
-  --dark-background-secondary: #3b3d42;
+  --dark-background-secondary: #111;
   --dark-header: #000;
   --dark-color: #ddd;
   --dark-color-secondary: #666;
